Add debug target to aid with development.

--- a/libfrank/Makefile
+++ b/libfrank/Makefile
@@ -1,10 +1,19 @@
-CFLAGS+= -fPIC -shared -ldl
-LDFLAGS+= -lbfd
+LDFLAGS+= -fPIC
+LDLIBS+= -lbfd -ldl 
+
+default: libfrank.so debug
 
 libfrank.so: frank.c frank.h
-	$(CC) -o $@ $(CFLAGS) $(LDFLAGS) $<
+	$(CC) -o $@ $(CFLAGS) $< $(LDFLAGS) -shared $(LDLIBS)
+
+debug: debug.c libfrank.so
+	$(CC) -o $@ $(CFLAGS) $< $(LDFLAGS) $(LDLIBS) -L. -lfrank
 
 clean:
 	rm libfrank.so
+	rm debug
 
-.PHONY: clean
+run: debug
+	LD_LIBRARY_PATH=. ./debug
+
+.PHONY: clean default run
